@@ -2,6 +2,12 @@
 TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
 ==============================================================================
 
+Oct 14 2016 (bgol, horizon branch):
+. Updated EDAPI plugin to version 3.7.5:
+  - Updated shipyard to EDDN v2 schema.
+  - Updated outfitting to EDDN v2 schema.
+  - Updated commodity to EDDN v3 schema.
+
 Jul 08 2016 (bgol, horizon branch):
 . Updated EDAPI plugin to version 3.7.4:
   - Let the user know about the API response.
